--- a/.github/workflows/scheduled-reply.yaml
+++ b/.github/workflows/scheduled-reply.yaml
@@ -26,4 +26,4 @@ jobs:
           GROQ_API_KEY: ${{ secrets.GROQ_API_KEY }}
           COHERE_API_KEY: ${{ secrets.COHERE_API_KEY }}
           PINECONE_API_KEY: ${{ secrets.PINECONE_API_KEY }}
-        run: python frontend/components/reply_cron.py
+        run: python reply_cron.py
