--- a/config/config.yaml
+++ b/config/config.yaml
@@ -4,8 +4,10 @@ pinecone:
 
 pdf_paths:
   # - "data/BHM-401T.pdf"
-  - "data/Chicken Biryani Recipe - Swasthi's Recipes.pdf"
-  - "data/Dosa Recipe, How to make Dosa Batter - Swasthi's Recipes.pdf"
+  - path: "data/Chicken Biryani Recipe - Swasthi's Recipes.pdf"
+    namespace: "chicken_biryani"
+  - path: "data/Dosa Recipe, How to make Dosa Batter - Swasthi's Recipes.pdf"
+    namespace: "dosa"
 
 
 chunking:
