--- a/.github/workflows/scheduled-reply.yaml
+++ b/.github/workflows/scheduled-reply.yaml
@@ -1,29 +1,29 @@
-# name: Scheduled Comment Replier
+name: Scheduled Comment Replier
 
-# on:
-#   schedule:
-#     - cron: '0 * * * *'  # Runs every hour 
-#   workflow_dispatch:  # Allows manual run from GitHub UI
+on:
+  schedule:
+    - cron: '0 * * * *'  # Runs every hour 
+  workflow_dispatch:  # Allows manual run from GitHub UI
 
-# jobs:
-#   reply_job:
-#     runs-on: ubuntu-latest
-#     steps:
-#       - name: Checkout code
-#         uses: actions/checkout@v3
+jobs:
+  reply_job:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-#       - name: Set up Python
-#         uses: actions/setup-python@v4
-#         with:
-#           python-version: "3.11"
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.11"
 
-#       - name: Install dependencies
-#         run: pip install -r requirements.txt
+      - name: Install dependencies
+        run: pip install -r requirements.txt
 
-#       - name: Run reply script
-#         env:
-#           DATABASE_URL: ${{ secrets.DATABASE_URL }}
-#           GROQ_API_KEY: ${{ secrets.GROQ_API_KEY }}
-#           COHERE_API_KEY: ${{ secrets.COHERE_API_KEY }}
-#           PINECONE_API_KEY: ${{ secrets.PINECONE_API_KEY }}
-#         run: python reply_cron.py
+      - name: Run reply script
+        env:
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
+          GROQ_API_KEY: ${{ secrets.GROQ_API_KEY }}
+          COHERE_API_KEY: ${{ secrets.COHERE_API_KEY }}
+          PINECONE_API_KEY: ${{ secrets.PINECONE_API_KEY }}
+        run: python reply_cron.py
